# f1-strategy-engine

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  keepalive.yml
.streamlit/: config.toml
analysis/: backtest_2026_season.py  backtest_austria_2026.py  make_hero.py  phase1_degradation_eda.py  phase1_eda.py  phase2_5_sequence.py  phase2_evolution.py  phase2_forward.py  phase3_simulate.py
app/: streamlit_app.py
app/pages/: Live_Race.py  Outcome_Predictor.py
data/processed/: dry_laps.parquet  lstm_nextlap.npz  race_laps.parquet  results.parquet  sprint_points.parquet  track_status.parquet
deploy/: CLOUD_RUN.md  HUGGINGFACE_SPACES.md
deploy/huggingface_space/: README.md
docs/: METHODOLOGY.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env-globals.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: DataTable.tsx  controls.tsx  ui.tsx
frontend/src/lib/: format.ts  time.ts  useAsync.ts  useLastVisit.ts  useSettings.ts
frontend/src/views/: AboutView.tsx  CalendarView.tsx  HomeView.tsx  LiveView.tsx  NewsView.tsx  OutcomeView.tsx  ProfilesView.tsx  RaceHubView.tsx  SettingsView.tsx  StandingsView.tsx  StrategyView.tsx  UndercutView.tsx  common.tsx
notebooks/: phase2_boosted.py  phase2_calibrate.py  phase2_degradation.py  phase3_sc_calibrate.py  phase3_simulate.py  phase4_optimize.py  phase_2026_validation.py
src/f1se/: __init__.py  api.py  config.py  eda.py  engine.py  live.py  validation.py
src/f1se/data/: __init__.py  clean.py  ingest.py  loader.py
src/f1se/models/: __init__.py  calibrate.py  censoring.py  cliff.py  degradation.py  degradation_boosted.py  degradation_evo.py  degradation_poly.py  era.py  lap_time.py  overtaking.py  thermal.py
src/f1se/sim/: __init__.py  duel.py  inrace.py  optimize.py  safety_car.py  simulate.py
src/f1se/standalone/: __init__.py  championship.py  news.py  outcome.py  podium.py  profiles.py  races.py  results.py  schedule.py  standings.py
tests/: conftest.py  test_calibrate.py  test_censoring.py  test_clean.py  test_cliff.py  test_degradation.py  test_degradation_boosted.py  test_degradation_evo.py  test_degradation_poly.py  test_duel.py  test_eda.py  test_engine_api.py  test_era.py  test_inrace.py  test_lap_time.py  test_loader.py  test_news.py  test_optimize.py  test_optimize_screen.py  test_outcome.py  test_overtaking.py  test_pit_loss.py  test_profiles.py  test_races.py  test_recency.py  test_schedule.py  test_simulate.py  test_standalone.py  test_standings.py  test_thermal.py  test_validation.py
