[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1se"
version = "1.0.0"
description = "F1 pit-strategy recommendation engine — recommends when to pit and which compounds to fit, with quantified uncertainty."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Shive" }]

# Base deps: enough to pull, tidy, and clean lap data (Phases 0–1).
# Upper bounds cap at the next major above the known-good version, so a surprise
# major release can't silently break a fresh install / cloud rebuild.
dependencies = [
    "fastf1>=3.4,<4",
    "pandas>=2.2,<3",
    "pyarrow>=16,<26",
    "numpy>=1.26,<3",
    "matplotlib>=3.9,<4",
]

[project.optional-dependencies]
# Phase 2+ modelling stack.
models = [
    "scikit-learn>=1.5,<2",
    "xgboost>=2.1,<4",
    "torch>=2.4,<3",
]
# API service (the UI is the separate React app in frontend/).
app = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "feedparser>=6.0,<7",  # F1 news aggregation (RSS/Atom)
]
# Dev tooling.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",  # required by fastapi.testclient (API tests)
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Network tests are opt-in: run only when explicitly selected.
markers = [
    "network: test requires live FastF1 / internet access (deselect with '-m \"not network\"')",
]
addopts = "-m 'not network'"

[tool.ruff]
line-length = 100
target-version = "py312"
# Analysis scripts (analysis/) are exploratory; lint the package, tests, and app.
extend-exclude = ["analysis"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # long lines: mostly UI strings/docstrings; readability > hard wrap
    "B008",  # function call in default arg: FastAPI's Depends(...) idiom
    "B905",  # zip without strict=: same-length zips throughout; noise
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
